--- a/announcement.html
+++ b/announcement.html
@@ -98,7 +98,7 @@
       <li>Join our mailing list (link coming soon)</li>
       <li>Follow us on GitHub (link coming soon)</li>
       <li>Join our Slack community (TBA)</li>
-      <li>Email us: <a href="mailto:your-email@domain.com">your-email@domain.com</a></li>
+      <li>Email us: <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.comm</a></li>
     </ul>
   </div>
 
