--- a/connected.html
+++ b/connected.html
@@ -55,7 +55,7 @@
 
     <h3>📮 Contact the Organizers</h3>
     <p>Have a question or want to collaborate? Reach out to us directly:<br>
-      <strong>Email:</strong> <a href="mailto:polar.semeval2026@nlp-research.org">polar.semeval2026@nlp-research.org</a><br>
+      <strong>Email:</strong> <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a><br>
       We usually respond within 2–3 business days.
     </p>
   </div>
