--- a/documentation.html
+++ b/documentation.html
@@ -170,7 +170,7 @@
       <h3>📬 Contact</h3>
       <p>
         For any questions, reach out to us at:<br>
-        📧 <a href="mailto:polar-task@semeval.org">polar-task@semeval.org</a><br>
+        📧 <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a><br>
         Or open an issue on <a href="#">GitHub Discussions</a>
       </p>
     </div>
