--- a/index.html
+++ b/index.html
@@ -281,12 +281,11 @@
 
     <h2>Contact Us</h2>
     <p>For any queries related to the task, dataset, or participation, feel free to write to us:</p>
-    <p><a href="mailto:polar.semeval2026@nlp-research.org" style="font-weight: bold;"> polarization-semeval-2026-organisers@googlegroups.com</a></p>
+    <p><a href="polarization-semeval-2026-organisers@googlegroups.com" style="font-weight: bold;"> polarization-semeval-2026-organisers@googlegroups.com</a></p>
 
     <p>We also encourage you to follow updates and join discussions via:</p>
     <ul>
       <li><a href="#" target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
-      <li><a href="#" target="_blank" rel="noopener noreferrer">Mailing List</a></li>
       <li><a href="#" target="_blank" rel="noopener noreferrer">Twitter/X Profile</a></li>
       <li><a href="#" target="_blank" rel="noopener noreferrer">CodaLab Task Page</a></li>
     </ul>
