--- a/participation.html
+++ b/participation.html
@@ -62,7 +62,7 @@
     <p>All teams that submit system descriptions will be included in the task overview paper.</p>
 
     <h3>💡 Questions?</h3>
-    <p>Join our GitHub Discussions, attend our webinars, or contact us at <a href="mailto:polar.semeval2026@nlp-research.org">polar.semeval2026@nlp-research.org</a></p>
+    <p>Join our GitHub Discussions, attend our webinars, or contact us at <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a></p>
     <p>We look forward to your participation and insights!</p>
   </div>
 </section>
