color gradient change

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 
   <header class="hero-section">
     <div class="overlay">
-      <div class="container text-center text-white hero-text">
-        <h1 class="display-4 fw-bold">POLAR @ SemEval 2026</h1>
-        <p class="lead">Attitude Polarization Detection in Multilingual Text</p>
+      <div class="container text-center  hero-text">
+        <h1 class="display-4 fw-bold" style="color: #542b76;">
+  POLAR @ SemEval 2026
+</h1>
+<p class="lead" style="color: #724d9d;">
+  Attitude Polarization Detection in Multilingual Text
+</p>
+
       </div>
     </div>
   </header>
@@ -49,7 +54,7 @@
     <div class="col-md-4">
       <a href="dates.html" class="card text-center text-decoration-none shadow-sm">
         <div class="card-body">
-          <h3 class="card-title text-danger">📅 Important Dates</h3>
+          <h3 class="card-title text-white">📅 Important Dates</h3>
         </div>
       </a>
     </div>
@@ -118,7 +123,6 @@
       </div>
     </div>
 
-    <br><hr>
   </div>
 </section>
 
