--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
   </nav>
 
-  <div class="container my-5">
+ <div class="container-fluid content-wrapper my-5">
 
 
 
-<section class="cta-section container mb-5">
+<section class="cta-section container-fluid content-wrapper mb-5">
   <div class="row justify-content-center g-4">
     <div class="col-md-4">
       <a href="announcement.html" class="card text-center text-decoration-none shadow-sm">
@@ -62,7 +62,7 @@
 </section>
 
 <section class="polar-info-section">
-  <div class="container" style="margin-top: -2rem">
+  <div class="container-fluid content-wrapper" style="margin-top: -2rem">
 
     <!-- Row 1: Goal + About POLAR -->
     <div class="row">
@@ -128,7 +128,7 @@
 
 <!-- Page Content -->
   <section class="organizers" style="margin-top: 2rem;">
-  <div class="container">
+  <div class="container-fluid content-wrapper">
    
     <h2>Task Organizers and Collaborators</h2>
    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-3">
