--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
   </nav>
 
- <div class="container-fluid content-wrapper my-5">
+  <div class="container my-5">
 
 
 
-<section class="cta-section container-fluid content-wrapper mb-5">
+<section class="cta-section container mb-5">
   <div class="row justify-content-center g-4">
     <div class="col-md-4">
       <a href="announcement.html" class="card text-center text-decoration-none shadow-sm">
@@ -62,7 +62,7 @@
 </section>
 
 <section class="polar-info-section">
-  <div class="container-fluid content-wrapper" style="margin-top: -2rem">
+  <div class="container" style="margin-top: -2rem">
 
     <!-- Row 1: Goal + About POLAR -->
     <div class="row">
@@ -128,7 +128,7 @@
 
 <!-- Page Content -->
   <section class="organizers" style="margin-top: 2rem;">
-  <div class="container-fluid content-wrapper">
+  <div class="container">
    
     <h2>Task Organizers and Collaborators</h2>
    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-3">
@@ -136,7 +136,7 @@
  
  <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/usman.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Usman Naseem">
+    <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Usman Naseem</h6>
       <p class="card-text mb-0 organizer-text">Macquarie University (Australia)</p>
@@ -145,7 +145,7 @@
 </div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/seid.png" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/seid.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Seid Muhie Yimam</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
@@ -155,7 +155,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/robert.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Robert Geislinger</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
@@ -165,7 +165,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/shamsuddeen.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/shamsuddeen.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Shamsuddeen Hassan Muhammad</h6>
       <p class="card-text mb-0 organizer-text">Imperial College London (UK)</p>
@@ -175,7 +175,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img figure-img-limit" alt="Sarah Kohail">
+    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Sarah Kohail</h6>
       <p class="card-text mb-0 organizer-text">Zayed University (United Arab Emirates) </p>
@@ -186,7 +186,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/juan.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Juan Ren">
+    <img src="assets/images/juan.jpeg" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
       <p class="card-text mb-0 organizer-text">Macquarie University (Australia)</p>
@@ -195,7 +195,7 @@
 </div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/rudy.jpg" class="card-img-top organizer-img figure-img-limit" alt="Juan Ren">
+    <img src="assets/images/rudy.jpg" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Rudy Alexandro Garrido Veliz</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
@@ -205,7 +205,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/saba.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/saba.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Saba Anwar</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
@@ -214,7 +214,7 @@
 </div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/ibrahim.png" class="card-img-top organizer-img figure-img-limit" alt="Ibrahim Said Ahmad">
+    <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Ibrahim Said Ahmad</h6>
       <p class="card-text mb-0 organizer-text">Bayero University Kano (Nigeria), Northeastern University (USA)</p>
@@ -223,7 +223,7 @@
 </div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/idris.png" class="card-img-top organizer-img figure-img-limit" alt="Idris Abdulmumin">
+    <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Idris Abdulmumin</h6>
       <p class="card-text mb-0 organizer-text">University of Pretoria (South Africa)</p>
@@ -232,7 +232,7 @@
 </div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/abhinew.png" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Abinew Ali Ayele</h6>
       <p class="card-text mb-0 organizer-text">Bahir Dar University (Ethiopia)</p>
@@ -241,7 +241,7 @@
 </div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/adem.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Prof. Adem Chanie Ali</h6>
       <p class="card-text mb-0 organizer-text">Bahir Dar University (Ethiopia), University of Hamburg (Germany)</p>
@@ -252,7 +252,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Martin Semmann</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg (Germany) </p>
@@ -262,7 +262,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/chris.jpg" class="card-img-top organizer-img figure-img-limit" alt="Seid Muhie Yimam">
+    <img src="assets/images/chris.jpg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Prof. Dr. Chris Biemann</h6>
       <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
