--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   POLAR @ SemEval 2026
 </h1>
 <p class="lead" style="color: #724d9d;">
-  Attitude Polarization Detection in Multilingual Text
+  Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
 </p>
 
       </div>
