--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="overlay">
       <div class="container text-center  hero-text">
         <h1 class="display-4 fw-bold" style="color: #542b76;">
-  POLAR @ SemEval 2026
+  Polar@SemEval-2026:  Task 9 - Detecting Multilingual, Multicultural and Multievent Online Polarization
 </h1>
 <p class="lead" style="color: #724d9d;">
   Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
