--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📚</div>
           <div class="text--center padding-horiz--md">
             <h3>About POLAR</h3>
-            <p>POLAR contains 23k+ instances in 7 languages, annotated for presence, type, and manifestation of polarization.</p>
+            <p>POLAR contains already more than 23k+ instances in 7 languages, annotated for presence, type, and manifestation of polarization. We already have 5 new languages on board, and the plan is to include as many as 20 languages globally, both high- and low-resource languages </p>
           </div>
         </a>
       </div>
