--- a/tasks.html
+++ b/tasks.html
@@ -30,9 +30,20 @@
 
     <h3>Multilingual, Multicultural, and Multievent Scope</h3>
     <p>To promote global inclusivity and cross-cultural representation, the dataset encompasses multiple languages, including many mid/low-resource and underrepresented ones in mainstream NLP research.</p>
-  <li><strong>High resource:</strong> English, German, Spanish, Arabic</li>
-      <li><strong>Mid and Low resource:</strong>  Urdu, Mozambican Portuguese, Amharic, Kinyarwanda, Hausa, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa, etc.</li>
 
+    <li>
+      <strong>Already collected and annotated:</strong>
+      English, German, Spanish, Arabic, Urdu, Amharic, Hausa
+    </li>
+    <li>
+      <strong>New languages:</strong>
+      <span style="background-color: yellow;">Turkish, Italian, Myanmar, Chinese</span>
+    </li>
+    <li>
+      <strong>Possible extensions:</strong>
+      Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa
+    </li>
+    
 
     <h3>Task Format and Subtasks</h3>
     <p>Participants may choose to compete in one or more of three subtasks:</p>
