--- a/tasks.html
+++ b/tasks.html
@@ -37,7 +37,7 @@
     </li>
     <li>
       <strong>New languages:</strong>
-      <span style="background-color: yellow;">Turkish, Italian, Myanmar, Chinese</span>
+      <span style="background-color: yellow;">Turkish, Italian, Burmmese, Chinese</span>
     </li>
     <li>
       <strong>Possible extensions:</strong>
