--- a/tasks.html
+++ b/tasks.html
@@ -33,15 +33,15 @@
 
     <li>
       <strong>Already collected and annotated:</strong>
-      English, German, Spanish, Arabic, Urdu, Amharic, Hausa
+      <span style="background-color: #D6FFD6;">English, German, Spanish, Arabic, Urdu, Amharic, Hausa </span>
     </li>
     <li>
       <strong>New languages:</strong>
-      <span style="background-color: yellow;">Turkish, Italian, Burmese, Chinese</span>
+      <span style="background-color: #FFF8DC;">Turkish, Italian, Burmese, Chinese</span>
     </li>
     <li>
       <strong>Possible extensions:</strong>
-      Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa
+     <span style="background-color: ##CCFFFF;"> Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa </span>
     </li>
     
 
