--- a/tasks.html
+++ b/tasks.html
@@ -41,7 +41,7 @@
     </li>
     <li>
       <strong>Possible extensions:</strong>
-     <span style="background-color: ##CCFFFF;"> Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa </span>
+     <span style="background-color: #CCFFFF;"> Mozambican Portuguese, Kinyarwanda, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa </span>
     </li>
     
 
