--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header class="hero-section">
     <div class="overlay">
       <div class="container text-center  hero-text">
-        <h1 class="display-4 fw-bold" style="color: #542b76;">
-  Polar@SemEval-2026:  Task 9 - Detecting Multilingual, Multicultural and Multievent Online Polarization
+        <h1 class="display-6 fw-bold" style="color: #542b76;">
+  Polar@SemEval-2026  <br>Task 9: Detecting Multilingual, Multicultural and Multievent Online Polarization
 </h1>
 <p class="lead" style="color: #724d9d;">
   Attitude Polarization Detection in Multilingual, Multicultural and Multievent Contexts
@@ -31,7 +31,8 @@
 
   </nav>
 
-  <div class="container my-5">
+  <div class="container-fluid px-5 my-5">
+
 
 
 
