google grp links

--- a/participation.html
+++ b/participation.html
@@ -60,6 +60,31 @@
       <li>Gain visibility in the NLP research community</li>
     </ul>
     <p>All teams that submit system descriptions will be included in the task overview paper.</p>
+<h3>🙌 Join Us</h3>
+
+<div class="row gy-4 my-4">
+  <!-- Google Group -->
+  <div class="col-md-6">
+    <div class="card shadow-sm border-0 h-100">
+      <div class="card-body">
+        <h5 class="card-title">📬 Google Group</h5>
+        <p class="card-text">Join our google group to receive updates, announcements, and community support.</p>
+    <a href="https://groups.google.com/g/polarization-semeval-2026-participants/" target="_blank" class="btn btn-purple text-light">Join the Group</a>
+ </div>
+    </div>
+  </div>
+
+  <!-- Google Colab -->
+  <div class="col-md-6">
+    <div class="card shadow-sm border-0 h-100">
+      <div class="card-body">
+        <h5 class="card-title">🧪 Google Colab</h5>
+        <p class="card-text">An interactive Colab notebook to help you get started is on the way!</p>
+        <button class="btn btn-secondary" disabled>Coming Soon</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <h3>💡 Questions?</h3>
     <p>Join our GitHub Discussions, attend our webinars, or contact us at <a href="polarization-semeval-2026-organisers@googlegroups.com">polarization-semeval-2026-organisers@googlegroups.com</a></p>
