--- a/tasks.html
+++ b/tasks.html
@@ -9,51 +9,62 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/style.css"/>
-  <style>
-    body {
-      background: #f8fafc;
-      font-family: 'Segoe UI', 'Roboto', Arial, sans-serif;
-    }
-    .nav-tabs {
-      font-size: 1.1rem;
-    }
+<style>
+  body {
+    background: #f8fafc;
+    font-family: 'Segoe UI', 'Roboto', Arial, sans-serif;
+    font-size: 1.13rem;         /* Increased from default; try 1.13-1.15rem */
+    line-height: 1.72;          /* More space between lines for easy reading */
+  }
+  .nav-tabs {
+    font-size: 1.18rem;         /* Slightly larger navigation */
+  }
 
-    .the-task h2,
-    .the-task h3 {
-      color: #3366cc;
-      font-weight: 700;
-      margin-top: 1.7em;
-    }
+  .the-task h2 {
+    color: #3366cc;
+    font-weight: 700;
+    margin-top: 1.7em;
+    font-size: 2.4rem;          /* Larger page headings */
+  }
+  .the-task h3 {
+    color: #3366cc;
+    font-weight: 700;
+    margin-top: 1.7em;
+    font-size: 1.6rem;          /* Subheads also larger */
+  }
 
-    .the-task li {
-      margin-bottom: .6em;
-    }
+  .the-task li {
+    margin-bottom: .6em;
+    font-size: 1.08rem;         /* List items larger for legibility */
+  }
 
-    .key-highlight {
-      background: #e5f4ff;
-      border-left: 4px solid #3366cc;
-      padding: 1em;
-      border-radius: 0.5em;
-      margin-bottom: 1.5em;
-      box-shadow: 0 2px 8px 0 rgba(0,0,0,.03);
-    }
+  .key-highlight {
+    background: #e5f4ff;
+    border-left: 4px solid #3366cc;
+    padding: 1.1em;
+    border-radius: 0.5em;
+    margin-bottom: 1.5em;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,.03);
+    font-size: 1.14rem;         /* Add a bit more focus to highlights */
+  }
 
-    .lang-list li {
-      margin-bottom: .3em;
-      font-size: 1rem;
-    }
+  .lang-list li {
+    margin-bottom: .3em;
+    font-size: 1.08rem;         /* Language list larger */
+  }
 
-    .footer-section {
-      background: #233871;
-      color: #fff;
-      padding: 2em 0 1em 0;
-      margin-top: 2em;
-    }
-    .footer-section a {
-      color: #90e0ef;
-      text-decoration: underline;
-    }
-  </style>
+  .footer-section {
+    background: #233871;
+    color: #fff;
+    padding: 2em 0 1em 0;
+    margin-top: 2em;
+    font-size: 1.14rem;         /* Footer text a bit bigger */
+  }
+  .footer-section a {
+    color: #90e0ef;
+    text-decoration: underline;
+  }
+</style>
 </head>
 <body>
 
