--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 </section>
 
 <!-- Page Content -->
-  <section class="organizers" style="margin-top: 2rem;">
-  <div class="container">
+  <section class="organizers mb-5" style="margin-top: 2rem;">
+  <div class="container  mb-5"></div>
    
     <h2>Task Organizers and Collaborators</h2>
    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-3">
@@ -176,7 +176,7 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
+    <img src="assets/images/sarah2.jpeg" class="card-img-top organizer-img" alt="Sarah Kohail">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Sarah Kohail</h6>
       <p class="card-text mb-0 organizer-text">Zayed University (United Arab Emirates) </p>
